# Copper-IA

./: .gitignore  AUTO-INSTALL.md  CHANGELOG-AUTO.md  Cargo.toml  ENVIRONMENT-VARS.md  IMPLEMENTATION-SUMMARY.md  INSTALL-FLOW.md  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  build.rs  setup-env.ps1  setup-env.sh  test-auto-install.ps1  test-installation.ps1  test-installation.sh  todo.md
.cargo/: config.toml
cpp/: CMakeLists.txt  lib.cpp
docs/: index.md  tensorflow_arithmetic_ops.md
docs/docs_libtorch/1_tensor/: Tensors.md
examples/: advanced_features.rs  basic_usage.rs  tensorflow_arithmetic.rs
src/: lib.rs
src/tensor_libortch/: ffi.rs  mod.rs  operators.rs  tensor.rs
src/tensor_tensorflow/: ffi.rs  mod.rs  tensors_flow.rs
src/unified/: backend.rs  device.rs  mod.rs  tensor.rs
