[package]
name = "ai_copper"
version = "0.1.3"
edition = "2021"
authors = ["Ryan Lima <ryan2020gary@gmail,com>"]
description = "Unified Rust bindings for LibTorch and TensorFlow - A powerful AI library"
license = "MIT"
repository = "https://github.com/seu_usuario/ai_copper"
readme = "README.md"
keywords = ["Rust", "C++", "libtorch", "tensorflow", "ai"]

[dependencies]
libc = "0.2"
rand = "0.8"
rand_distr = "0.4"

[build-dependencies]
cc = "1.0"
bindgen = "0.59" 

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[lib]
name = "ai_copper"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

